src/test/compile-fail/wrong-ret-type.rs
// error-pattern: mismatched types
fn mk_int() -> uint {
  let int i = 3;
  ret i;
}
fn main() {
}
